hphp/hack/test/typecheck/use_unknown_class_as_trait_fail.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

class A {}
/* HH_FIXME[4123]: cascading errors */
class B {
  use Z; // Hack should not allow this
}
